<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
package.xml
RVO2 Library

SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
SPDX-License-Identifier: Apache-2.0

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    https://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

Please send all bug reports to <geom@cs.unc.edu>.

The authors may be contacted via:

Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
Dept. of Computer Science
201 S. Columbia St.
Frederick P. Brooks, Jr. Computer Science Bldg.
Chapel Hill, N.C. 27599-3175
United States of America

<https://gamma.cs.unc.edu/RVO2/>
-->
<package format="3">
  <name>rvo2</name>
  <version>2.0.3</version>
  <description>Optimal Reciprocal Collision Avoidance</description>

  <maintainer email="geom@cs.unc.edu">Jamie Snape</maintainer>

  <license>Apache-2.0</license>

  <url type="website">https://gamma.cs.unc.edu/RVO2/</url>
  <url type="repository">https://github.com/snape/RVO2</url>

  <author>Jur van den Berg</author>
  <author>Stephen J. Guy</author>
  <author>Jamie Snape</author>
  <author>Ming C. Lin</author>
  <author>Dinesh Manocha</author>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
