# -*- mode: bazel; -*-
# vi: set ft=bazel:

#
# examples/BUILD.bazel
# RVO2 Library
#
# SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Please send all bug reports to <geom@cs.unc.edu>.
#
# The authors may be contacted via:
#
# Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
# Dept. of Computer Science
# 201 S. Columbia St.
# Frederick P. Brooks, Jr. Computer Science Bldg.
# Chapel Hill, N.C. 27599-3175
# United States of America
#
# <https://gamma.cs.unc.edu/RVO2/>
#

load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_applicable_licenses = ["//:license"])

licenses(["notice"])  # Apache-2.0

cc_test(
    name = "Blocks",
    size = "medium",
    timeout = "short",
    srcs = ["Blocks.cc"],
    defines = [
        "RVO_OUTPUT_TIME_AND_POSITIONS=0",
        "RVO_SEED_RANDOM_NUMBER_GENERATOR=0",
    ],
    tags = ["block-network"],
    visibility = ["//visibility:private"],
    deps = ["//src:RVO"],
)

cc_test(
    name = "Circle",
    size = "medium",
    timeout = "short",
    srcs = ["Circle.cc"],
    defines = [
        "RVO_OUTPUT_TIME_AND_POSITIONS=0",
        "RVO_SEED_RANDOM_NUMBER_GENERATOR=0",
    ],
    tags = ["block-network"],
    visibility = ["//visibility:private"],
    deps = ["//src:RVO"],
)

cc_test(
    name = "Roadmap",
    size = "medium",
    timeout = "short",
    srcs = ["Roadmap.cc"],
    defines = [
        "RVO_OUTPUT_TIME_AND_POSITIONS=0",
        "RVO_SEED_RANDOM_NUMBER_GENERATOR=0",
    ],
    tags = ["block-network"],
    visibility = ["//visibility:private"],
    deps = ["//src:RVO"],
)
