# -*- mode: bazel; -*-
# vi: set ft=bazel:

#
# examples/BUILD.bazel
# RVO2 Library
#
# SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Please send all bug reports to <geom@cs.unc.edu>.
#
# The authors may be contacted via:
#
# Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
# Dept. of Computer Science
# 201 S. Columbia St.
# Frederick P. Brooks, Jr. Computer Science Bldg.
# Chapel Hill, N.C. 27599-3175
# United States of America
#
# <https://gamma.cs.unc.edu/RVO2/>
#

load("@rules_cc//cc:defs.bzl", "cc_test")

package(default_package_metadata = [
    "//:license",
    "//:package_info",
])

cc_test(
    name = "Blocks",
    size = "medium",
    timeout = "short",
    srcs = ["Blocks.cc"],
    copts = select({
        "//platforms:linux_aarch64": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fno-common",
            "-fstack-clash-protection",
            "-fstack-protector-strong",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:linux": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fcf-protection",
            "-fno-common",
            "-fstack-clash-protection",
            "-fstack-protector-strong",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:macos": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fno-common",
            "-fstack-protector-strong",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:windows": [
            "/GS",
            "/W4",
            "/guard:cf",
        ],
        "//conditions:default": [],
    }),
    defines = [
        "RVO_OUTPUT_TIME_AND_POSITIONS=0",
        "RVO_SEED_RANDOM_NUMBER_GENERATOR=0",
    ],
    dynamic_deps = select({
        "@platforms//os:windows": ["//:RVO"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//os:linux": [
            "-Wl,-Bsymbolic-functions",
            "-Wl,-z,defs",
            "-Wl,-z,noexecstack",
            "-Wl,-z,now",
            "-Wl,-z,relro",
            "-Wl,-z,separate-code",
        ],
        "//conditions:default": [],
    }),
    tags = ["block-network"],
    deps = ["//src:RVO"],
)

cc_test(
    name = "Circle",
    size = "medium",
    timeout = "short",
    srcs = ["Circle.cc"],
    copts = select({
        "//platforms:linux_aarch64": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fno-common",
            "-fstack-clash-protection",
            "-fstack-protector-strong",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:linux": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fcf-protection",
            "-fno-common",
            "-fstack-clash-protection",
            "-fstack-protector-strong",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:macos": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fno-common",
            "-fstack-protector-strong",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:windows": [
            "/GS",
            "/W4",
            "/guard:cf",
        ],
        "//conditions:default": [],
    }),
    defines = [
        "RVO_OUTPUT_TIME_AND_POSITIONS=0",
        "RVO_SEED_RANDOM_NUMBER_GENERATOR=0",
    ],
    dynamic_deps = select({
        "@platforms//os:windows": ["//:RVO"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//os:linux": [
            "-Wl,-Bsymbolic-functions",
            "-Wl,-z,defs",
            "-Wl,-z,noexecstack",
            "-Wl,-z,now",
            "-Wl,-z,relro",
            "-Wl,-z,separate-code",
        ],
        "//conditions:default": [],
    }),
    tags = ["block-network"],
    deps = ["//src:RVO"],
)

cc_test(
    name = "Roadmap",
    size = "medium",
    timeout = "short",
    srcs = ["Roadmap.cc"],
    copts = select({
        "//platforms:linux_aarch64": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fno-common",
            "-fstack-clash-protection",
            "-fstack-protector-strong",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:linux": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fcf-protection",
            "-fno-common",
            "-fstack-clash-protection",
            "-fstack-protector-strong",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:macos": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fno-common",
            "-fstack-protector-strong",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:windows": [
            "/GS",
            "/W4",
            "/guard:cf",
        ],
        "//conditions:default": [],
    }),
    defines = [
        "RVO_OUTPUT_TIME_AND_POSITIONS=0",
        "RVO_SEED_RANDOM_NUMBER_GENERATOR=0",
    ],
    dynamic_deps = select({
        "@platforms//os:windows": ["//:RVO"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//os:linux": [
            "-Wl,-Bsymbolic-functions",
            "-Wl,-z,defs",
            "-Wl,-z,noexecstack",
            "-Wl,-z,now",
            "-Wl,-z,relro",
            "-Wl,-z,separate-code",
        ],
        "//conditions:default": [],
    }),
    tags = ["block-network"],
    deps = ["//src:RVO"],
)
