# -*- mode: bazel; -*-
# vi: set ft=bazel:

#
# src/BUILD.bazel
# RVO2 Library
#
# SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Please send all bug reports to <geom@cs.unc.edu>.
#
# The authors may be contacted via:
#
# Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
# Dept. of Computer Science
# 201 S. Columbia St.
# Frederick P. Brooks, Jr. Computer Science Bldg.
# Chapel Hill, N.C. 27599-3175
# United States of America
#
# <https://gamma.cs.unc.edu/RVO2/>
#

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")

package(default_package_metadata = [
    "//:license",
    "//:package_info",
])

filegroup(
    name = "hdrs",
    srcs = [
        "Export.h",
        "Line.h",
        "RVO.h",
        "RVOSimulator.h",
        "Vector2.h",
    ],
)

cc_library(
    name = "RVO",
    srcs = [
        "Agent.cc",
        "Agent.h",
        "KdTree.cc",
        "KdTree.h",
        "Line.cc",
        "Obstacle.cc",
        "Obstacle.h",
        "RVOSimulator.cc",
        "Vector2.cc",
    ],
    hdrs = [":hdrs"],
    copts = select({
        "@platforms//os:windows": ["/W4"],
        "//conditions:default": [
            "-fvisibility-inlines-hidden",
            "-fvisibility=hidden",
            "-Wall",
            "-Werror=format-security",
        ],
    }),
    local_defines = select({
        "@platforms//os:windows": ["RVO_EXPORTS"],
        "//conditions:default": [],
    }),
    strip_include_prefix = "/src",
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "include",
    srcs = [":hdrs"],
    attributes = pkg_attributes(mode = "0644"),
    prefix = "usr/include/RVO",
    visibility = ["//:__pkg__"],
)
