# -*- mode: bazel; -*-
# vi: set ft=bazel:

#
# src/BUILD.bazel
# RVO2 Library
#
# SPDX-FileCopyrightText: 2008 University of North Carolina at Chapel Hill
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# Please send all bug reports to <geom@cs.unc.edu>.
#
# The authors may be contacted via:
#
# Jur van den Berg, Stephen J. Guy, Jamie Snape, Ming C. Lin, Dinesh Manocha
# Dept. of Computer Science
# 201 S. Columbia St.
# Frederick P. Brooks, Jr. Computer Science Bldg.
# Chapel Hill, N.C. 27599-3175
# United States of America
#
# <https://gamma.cs.unc.edu/RVO2/>
#

load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files")

package(default_package_metadata = [
    "//:license",
    "//:package_info",
])

filegroup(
    name = "hdrs",
    srcs = [
        "Export.h",
        "Line.h",
        "RVO.h",
        "RVOSimulator.h",
        "Vector2.h",
    ],
)

cc_library(
    name = "RVO",
    srcs = [
        "Agent.cc",
        "Agent.h",
        "KdTree.cc",
        "KdTree.h",
        "Line.cc",
        "Obstacle.cc",
        "Obstacle.h",
        "RVOSimulator.cc",
        "Vector2.cc",
    ],
    hdrs = [":hdrs"],
    copts = select({
        "//platforms:linux_aarch64": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fno-common",
            "-fstack-clash-protection",
            "-fstack-protector-strong",
            "-fvisibility-inlines-hidden",
            "-fvisibility=hidden",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:linux": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fcf-protection",
            "-fno-common",
            "-fstack-clash-protection",
            "-fstack-protector-strong",
            "-fvisibility-inlines-hidden",
            "-fvisibility=hidden",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:macos": [
            "-Wall",
            "-D_FORTIFY_SOURCE=2",
            "-fno-common",
            "-fstack-protector-strong",
            "-fvisibility-inlines-hidden",
            "-fvisibility=hidden",
            "-std=c++98",
            "-Werror=format-security",
        ],
        "@platforms//os:windows": [
            "/GS",
            "/W4",
            "/guard:cf",
        ],
        "//conditions:default": [],
    }),
    linkopts = select({
        "@platforms//os:linux": [
            "-Wl,-Bsymbolic-functions",
            "-Wl,-z,defs",
            "-Wl,-z,noexecstack",
            "-Wl,-z,now",
            "-Wl,-z,relro",
            "-Wl,-z,separate-code",
        ],
        "//conditions:default": [],
    }),
    local_defines = select({
        "@platforms//os:windows": ["RVO_EXPORTS"],
        "//conditions:default": [],
    }),
    strip_include_prefix = "/src",
    visibility = ["//visibility:public"],
)

pkg_files(
    name = "include",
    srcs = [":hdrs"],
    attributes = pkg_attributes(mode = "0644"),
    prefix = "usr/include/RVO",
    visibility = ["//:__pkg__"],
)
